--- a/project-1/src/main/webapp/WEB-INF/web.xml
+++ b/project-1/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,27 @@
   <display-name>project-1</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+  	<servlet-name>FrontController</servlet-name>
+  	<servlet-class>com.revature.web.FrontController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>FrontController</servlet-name>
+  	<url-pattern>/login</url-pattern>
+  	<url-pattern>/logout</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>EmpController</servlet-name>
+  	<servlet-class>com.revature.web.EmpController</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>EmpController</servlet-name>
+  	<url-pattern>/submitrequest</url-pattern>
+  	<url-pattern>/pendingrequests</url-pattern>
+  </servlet-mapping>
 </web-app>
